fix layout issue in step 4

--- a/src/components/Step2/Step2.scss
+++ b/src/components/Step2/Step2.scss
@@ -1,6 +1,11 @@
 .step2-container {
- margin-top: 60px;
+ margin-top: 40px;
  
+}
+
+.step2-header{
+  font-size: 1.6rem;
+  
 }
 
 @media screen and (max-width: 768px) {
@@ -14,6 +19,7 @@
   }
   .step2-header{
     height: 0px;
+    
   }
   .step2-sub-header{
     width: 90%;
